--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ dirs = "5.0.1"
 tokio = { version = "1.29.1", features = ["full"] }
 reqwest = { version = "0.11.18", features = ["json", "cookies", "gzip"] }
 md5 = "0.7.0"
+serde_json = "1.0.100"
+tracing = { version = "0.1.37", features = ["log"] }
