--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ reqwest = { version = "0.11.18", features = ["json", "cookies", "gzip"] }
 md5 = "0.7.0"
 serde_json = "1.0.100"
 tracing = { version = "0.1.37", features = ["log"] }
+lazy_static = "1.4.0"
 
 [workspace.dependencies.iced]
 version = "0.9.0"
