--- a/data/Cargo.toml
+++ b/data/Cargo.toml
@@ -16,6 +16,7 @@ reqwest.workspace = true
 md5.workspace = true
 serde_json.workspace = true
 tracing.workspace = true
+lazy_static.workspace = true
 
 [dependencies.iced]
 workspace = true
