--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 resolver = "2"
-members = ["data", "ext"]
+members = ["data", "ext", "indicators", "app"]
 
 [workspace.dependencies]
 anyhow = { version = "1.0.71", features = ["backtrace"] }
@@ -15,6 +15,7 @@ md5 = "0.7.0"
 serde_json = "1.0.100"
 tracing = { version = "0.1.37", features = ["log"] }
 lazy_static = "1.4.0"
+ta = { version = "0.5.0", features = ["serde"] }
 
 [workspace.dependencies.iced]
 version = "0.9.0"
@@ -32,3 +33,8 @@ features = [
     "svg",
     "system",
 ]
+
+[workspace.dependencies.plotters]
+version = "0.3.4"
+default-features = false
+features = ["all_elements", "all_series", "full_palette", "chrono", "datetime"]
